# games101

Assignment0/: main  main.cpp
Assignment1/: main.cpp
Assignment2/: main.cpp  rasterizer.cpp
Assignment3/: Texture.hpp  main.cpp  rasterizer.cpp
Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp
Assignment7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp
assignment4/: main.cpp
assignment5/: Renderer.cpp  Triangle.hpp  main.cpp
cudashader/: CMakeLists.txt  main.cpp
cudashader/common/: AreaLight.hpp  Intersection.hpp  Light.hpp  Ray.hpp  Vector.hpp  global.hpp
cudashader/material/: Material.hpp
cudashader/object/: OBJ_Loader.hpp  Object.hpp  Sphere.hpp  Triangle.hpp
cudashader/partition/: BVH.hpp  Bounds3.hpp
cudashader/render/: Render.hpp  cudarender.hpp
cudashader/scene/: Scene.hpp
gpu/: CMakeLists.txt
gpu/headers/: helper_cuda_drvapi.h
gpu/src/: main.cpp
gpu/src/common/: Float2Byte.cu  Float2Byte.cuh  Setting.h  float2Extension.cu  float2Extension.cuh  float3Extension.cu  float3Extension.cuh  float3x3.cuh
gpu/src/cuda/: DeviceManager.cu  DeviceManager.h  RTDeviceData.cu  RTDeviceData.cuh  RTSampler.cu  RTSampler.cuh  RayTracer.cpp  RayTracer.h
gpu/src/scene/: BVH.cu  BVH.cuh  Bounds3.cpp  Bounds3.h  Camera.hpp  Material.cu  Material.cuh  Ray.cuh  Scene.cpp  Scene.h  Sphere.cuh  Triangle.hpp
gpu/src/window/: Engine.cpp  Engine.h  Window.cpp  Window.h  glad.cpp
last/: CMakeLists.txt
last/headers/: tiny_obj_loader.h
last/src/: main.cpp
last/src/common/: Float2Byte.cpp  Setting.h  float2Extension.cpp  float2Extension.h  float3Extension.cpp  float3Extension.h  float3x3.h
last/src/render/: Shader.h
last/src/scene/: Camera.h  Scene.cpp  Scene.h
last/src/window/: Window.cpp  Window.h
